--- a/parroquiaproject/sitio/templates/dashboard.html
+++ b/parroquiaproject/sitio/templates/dashboard.html
@@ -111,10 +111,11 @@
             {% if actividades %}
                 <ul class="list-group list-group-flush">
                     {% for actividad in actividades %}
-                        <li class="list-group-item">
-                            <strong>{{ actividad.categoria }}</strong> - {{ actividad.dia }} {{ actividad.hora }}<br>
-                            <small class="text-muted">{{ actividad.iglesia.nombre }}</small>
-                        </li>
+                    <li class="list-group-item">
+                    <strong>{{ actividad.categoria }}</strong> - {{ actividad.fecha_y_hora }}
+                    <br>
+                    <small class="text-muted">{{ actividad.iglesia.nombre }}</small>
+                    </li>
                     {% endfor %}
                 </ul>
             {% else %}
